# Threaded-Matrix-Multiplication

./: CMakeLists.txt  ans.txt  input.txt  main  main.c
FilesHandler/Sources/: TxtFileLoader.c
Lists/Sources/: Vector.c
Strings/Sources/: String.c
